<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_ent">


    <TextView
        android:id="@+id/hello_text"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="567dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/description"
        android:layout_width="328dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="396dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_text" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forward"
        android:layout_width="327dp"
        android:layout_height="52dp"
        android:layout_marginStart="16.5dp"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="16.5dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:background="@drawable/button_larg"
        android:text="@string/forward"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>