<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_abo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_abo">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_description"
        android:layout_width="303sp"
        android:layout_height="24sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/about_me_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_arrow"
        android:layout_width="16sp"
        android:layout_height="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="328.16dp"
        app:layout_constraintBottom_toTopOf="@+id/view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_item" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/line_21"
        android:strokeColor="#C6C6C8"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/name_title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_title_view"
        android:layout_width="329sp"
        android:layout_height="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16sp"
        android:text="@string/name_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/container_edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/field"
        android:gravity="center"
        android:inputType="text"
        app:errorEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/age_title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/field"
            android:gravity="center"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/age_title_view"
        android:layout_width="329sp"
        android:layout_height="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16sp"
        android:text="@string/price_pack"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/container_edit_price_pack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_edit_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_edit_price_pack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/field"
        android:gravity="center"
        android:inputType="number"
        app:errorEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/price_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_title_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_price_pack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/field"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price_title"
        android:layout_width="329sp"
        android:layout_height="24sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16sp"
        android:text="@string/age_text"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/container_edit_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_edit_price_pack" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_edit_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/field"
        android:gravity="center"
        android:inputType="number"
        app:errorEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/count_of_sigar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_title">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/field"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/count_of_sigar"
        android:layout_width="329sp"
        android:layout_height="24sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16sp"
        android:text="@string/text_count_of_sigar"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/container_edit_text_count_of_sigar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_edit_age" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_edit_text_count_of_sigar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16sp"
        android:background="@drawable/field"
        android:gravity="center"
        android:inputType="number"
        app:errorEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count_of_sigar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_count_of_sigar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/field"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="329sp"
        android:layout_height="24sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16sp"
        android:text="@string/rejection_date"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container_edit_text_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_edit_text_count_of_sigar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_edit_text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/field"
        android:gravity="center"
        android:inputType="number"
        app:errorEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/field"
            android:gravity="center"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        android:layout_width="335dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="13sp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_larg"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_edit_text_date" />

</androidx.constraintlayout.widget.ConstraintLayout>